--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 :root {
-    --accent-color: rgb(13, 216, 131);
+    --accent-color: rgb(11, 228, 145);
 }
 
 * {
@@ -133,6 +133,7 @@ nav ol a :hover {
 
 .projects-info {
     margin-top: 50px;
+    font-size: 2em;
 }
 
 .cards {
@@ -229,6 +230,57 @@ nav ol a :hover {
 
 .skills-page {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     min-height: 100vh;
     background: var(--accent-color);
+}
+
+.skills-header {
+    font-size: 2em;
+    margin-top: 100px;
+}
+
+.bubble-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.skills-bubble {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: black;
+    margin: 50px;
+    transition: 0.2s linear;
+    transform-origin: center;
+}
+
+.skills-bubble:hover {
+    border-radius: 25%;
+}
+
+.skills-bubble h1 {
+    color: var(--accent-color);
+    font-size: 25px;
+}
+
+
+
+
+/* contact page */
+
+
+
+
+.contact-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    background: black;
 }
