--- a/CSS/style.css
+++ b/CSS/style.css
@@ -159,7 +159,7 @@ nav ol a :hover {
     justify-content: center;
     align-items: center;
     max-width: 300px;
-    margin: 50px;;
+    margin: 50px;
 }
 
 .project-card {
@@ -307,12 +307,14 @@ nav ol a :hover {
 .contact-content h1 {
     color: white;
     font-size: 5em;
+    text-align: center;
 }
 
 .contact-content h3 {
     color: white;
     font-size: 3em;
     text-align: center;
+    margin: 10px;
 }
 
 .contact-me {
@@ -326,10 +328,12 @@ nav ol a :hover {
 .contact-me p {
     color: white;
     font-weight: bold;
+    text-align: center;
 }
 
 .contact-buttons {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
@@ -365,9 +369,36 @@ nav ol a :hover {
 
 @media only screen and (max-width: 480px) {
     .name-page h1 {
-        font-size: 100px;
+        font-size: 80px;
     }
     nav {
         display: none;
+    }
+    .skills-header {
+        text-align: center;
+    }
+    .skills-bubble {
+        width: 100px;
+        height: 100px;
+        margin: 10px;
+    }
+    .projects-info {
+        text-align: center;
+    }
+    .container {
+        margin: 50px 0;
+    }
+    .contact-me {
+        flex-direction: column;
+        font-size: 1em;
+    }
+    .contact-buttons a {
+        margin-left: 0;
+    }
+    .contact-content h1 {
+        font-size: 2em;
+    }
+    .contact-content h3 {
+        font-size: 1.5em;
     }
 }
