--- a/CSS/style.css
+++ b/CSS/style.css
@@ -171,6 +171,13 @@ nav ol a :hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+#project-2:hover {
+    background-color: rgb(182, 182, 182);
+    background-image: url('../resources/Screen\ Shot\ 2021-12-22\ at\ 1.26.34\ PM.png');
+    background-size: cover;
+    background-blend-mode: lighten;
+}
+
 .card-content {
     display: flex;
     flex-direction: column;
