--- a/CSS/style.css
+++ b/CSS/style.css
@@ -167,15 +167,24 @@ nav ol a :hover {
     flex-direction: column;
     justify-content: center;
     max-width: 80%;
+    height: 400px;
     border-radius: 2em;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-#project-2:hover {
-    background-color: rgb(182, 182, 182);
-    background-image: url('../resources/Screen\ Shot\ 2021-12-22\ at\ 1.26.34\ PM.png');
+.project-card:hover {
+    background-color: rgb(56, 56, 56);
     background-size: cover;
-    background-blend-mode: lighten;
+    color: white;
+    background-blend-mode: multiply;
+}
+
+#project-1:hover {
+    background-image: url('../resources/ravenousphoto.png');
+}
+
+#project-2:hover {
+    background-image: url('../resources/Screen\ Shot\ 2021-12-22\ at\ 1.26.34\ PM.png');
 }
 
 .card-content {
